--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -1,6 +1,7 @@
 :root {
   // Colors
   --color-primary: #4f46e5;
+  --color-primary-dark: #4338ca;
   --color-white: #ffffff;
   --color-bg-light: #f8fafc;
   --color-bg-lighter: #f1f5f9;
@@ -52,4 +53,10 @@
 *::after {
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  min-width: 360px;
+  margin: 0;
+  padding: 0;
 }
